card border overlap fix

--- a/frontend/app/app.less
+++ b/frontend/app/app.less
@@ -118,13 +118,12 @@ body {
                 border-bottom: 1px solid #ccc;
                 border-radius: 3px;
                 cursor: pointer;
-                // margin-top: 6px;
+                margin-top: 6px;
                 margin-bottom: 6px;
                 max-width: 300px;
                 min-height: 20px;
                 position: relative;
                 z-index: 0;
-                // transition : 900ms all;
 
                 &.is_hovered{
                     background-color: #EDEFF0;
